Valerio : update classe BeverageDAO.java, creazione istanza su Main e prova comandi sql di BeverageDAO